Cloudinary configured, pictures are uploaded into cloud upon save

--- a/photo-mgmt-backend/src/main/resources/application.yaml
+++ b/photo-mgmt-backend/src/main/resources/application.yaml
@@ -27,3 +27,7 @@ server:
   port: 8777
   servlet:
     context-path: '/api'
+cloudinary:
+  cloud-name: debuvrlfm
+  api-key: 852454939211447
+  api-secret: YsfLquGg3TQ0VU0s8sdatgrOyVg
