--- a/photo-mgmt-backend/pom.xml
+++ b/photo-mgmt-backend/pom.xml
@@ -203,6 +203,11 @@
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-annotations</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.35.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
