--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ logs/
 spring-boot-starter/
 
 # Secrets
-/application.properties
+/application.yaml
 
 # Other stuff from the folder
 Documentation/
