--- a/photo-mgmt-backend/pom.xml
+++ b/photo-mgmt-backend/pom.xml
@@ -208,6 +208,16 @@
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.35.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.5.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
